# dream_yara

./: .gitmodules  CMakeLists.txt  INFO  LICENSE  README.rst
src/: CMakeLists.txt  d_apply_filter.cpp  d_apply_filter.h  d_bloom_filter.h  d_build_filter.cpp  d_indexer.cpp  d_kdx_filter.h  d_mapper.cpp  d_mapper.h  d_misc_options.h  d_update_filter.cpp  mapper.h
tests/: generate_outputs.sh  manage_bins.py  run_tests.py
tests/gold/: 64-viral-binned-genomes.filter.md5  64-viral-reads.rec.t1.sam  64-viral-reads.t1.sam  64-viral-reads.tag.t1.sam
tests/gold/64-viral-binned-indices/: 0.lf.drp  0.lf.drv  0.lf.pst  0.rid.concat  0.sa.ind  0.sa.val  0.txt.concat  1.lf.drp  1.lf.drv  1.lf.pst  1.rid.concat  1.sa.ind  1.sa.len  1.sa.val  1.txt.concat  1.txt.limits  1.txt.size  10.lf.drp  10.lf.drv  10.lf.pst  10.rid.concat  10.sa.ind  10.sa.val  10.txt.concat  11.lf.drp  11.lf.drv  11.lf.pst  11.rid.concat  11.sa.ind  11.sa.val  11.txt.concat  12.lf.drp  12.lf.drv  12.lf.pst  12.rid.concat  12.sa.ind  12.sa.val  12.txt.concat  13.lf.drp  13.lf.drv  (+421 more)
tests/input/: 64-viral-genomes.fa  64-viral-reads.fa
